# learning-cpp

./: README.md
advertisement/: CMakeLists.txt  CalculationTotalEarnings.cpp  Functions.h  OutputResult.cpp  Structs.h  UserInput.cpp  main.cpp
array_of_names/: CMakeLists.txt  main.cpp
balls/: CMakeLists.txt  main.cpp
binary_search/: CMakeLists.txt  main.cpp
blackjack/: BlackJack.h  CMakeLists.txt  EnumAndStruct.h  GetCardValue.cpp  PlayBlackjack.cpp  PrintCard.cpp  PrintDeck.cpp  ShuffleDeck.cpp  SwapCards.cpp  main.cpp
calculator/: CMakeLists.txt  main.cpp
calculator_2/: CMakeLists.txt  main.cpp
factorial_rec/: CMakeLists.txt  main.cpp
fractional_numbers/: CMakeLists.txt  Structions.h  UserInput.cpp  main.cpp
functions/: CMakeLists.txt  IsEqual.cpp  IsEven.cpp  addition.cpp  constants.h  doubleNumber.cpp  getValueFromUser.cpp  header.h  main.cpp  sizeOfTypes.cpp
game_with_squares/: CMakeLists.txt  main.cpp
guess_the_number/: CMakeLists.txt  main.cpp
list_of_names/: CMakeLists.txt  main.cpp
monster_creating/: CMakeLists.txt  CreateMonster.cpp  FromIntToMonsterType.cpp  FromMonsterToInt.cpp  MonsterCreating.h  MonsterTypeAndMonster.h  NumberOfMonsters.cpp  PrintMonster.cpp  main.cpp
numbers/: CMakeLists.txt  main.cpp
player_backpack/: CMakeLists.txt  main.cpp
rgba/: CMakeLists.txt  main.cpp
sort_with_reference_on_functions/: CMakeLists.txt  main.cpp
stack/: CMakeLists.txt  main.cpp
student_mark/: CMakeLists.txt  main.cpp
thing/: CMakeLists.txt  main.cpp
tic_tac_toe/: CMakeLists.txt  main.cpp  ticatactoefunc.cpp  tictactoeheader.h
(+8 files in other folders)
